Add modal and animation burger

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="desktop-only">
       <div class="desktop-container">
-        <h1>Only Desktop</h1>
+        <h1>Desktop Only</h1>
       </div>
     </div>
     <div class="container">
